--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
-    <h1>Tic Tac Toe</h1>
+    <h1>Kolko i krzyżyk</h1>
     <p>Current Player: <span id="currentPlayer">X</span></p>
     <div class="board" id="board">
       <div class="cell"></div>
